K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  backend-service
  namespace: mean-crud
spec:
  selector:
    app:  backend
  type:  ClusterIP
  ports:
  - port:  3000
    targetPort:  3000
