K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  frontend-service
  namespace: mean-crud
spec:
  selector:
    app:  frontend
  type:  ClusterIP
  ports:
  - port:  80
    targetPort:  80
